# HackZurich_Migros_Backend

./: README.md
Backend/: Backend.md  analyze_shopping_tendency.ipynb  pyproject.toml  requirements.txt
Backend/MigrosData/Migros_case/: BarcodeToID.py  Dimension_circularity.csv  Fisch.csv  M-Check_packaging.csv  barcode_to_id.csv  sample_customer.csv
Backend/MigrosData/Migros_case/Shoppin_Cart/: trx_202309.7z
Backend/MigrosData/Migros_case/products/: products_README.md
Backend/MigrosData/Migros_case/products/en/: 079500027000.json  100100300000.json  100102300000.json  100102700000.json  100102800000.json  100102900000.json  100103000000.json  100103100000.json  100104900000.json  100105400000.json  100105700000.json  100110000000.json  100110500000.json  100111500000.json  100112500000.json  100113200000.json  100113300000.json  100113400000.json  100113500000.json  100113600000.json  100115000000.json  100115100000.json  100116500000.json  100117900000.json  100118300000.json  100119400000.json  100120000000.json  100120400000.json  100120900000.json  100121200000.json  100121300000.json  100121700000.json  100122000000.json  100122100000.json  100122300000.json  100123800000.json  100124100000.json  100124200000.json  100124500000.json  100124700000.json  (+39016 more)
Backend/app/: main.py
Backend/app/database/: database.py
Frontend/: Frontend.md
ML/: ML.md  pyproject.toml  requirements.txt  sandbox.ipynb
ML/app/: main.py  similar_item.py
