[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["cheeseNA <kurocat2000@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.103.1"
uvicorn = "^0.23.2"
pandas = "^2.1.0"
requests = "^2.31.0"
jupyter = "^1.0.0"
plotly = "^5.17.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
