[tool.poetry]
name = "ml"
version = "0.1.0"
description = ""
authors = ["cheeseNA <kurocat2000@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
scikit-learn = "^1.3.0"
pandas = "^2.1.0"
numpy = "^1.25.2"
matplotlib = "^3.8.0"
plotly = "^5.17.0"
jupyter = "^1.0.0"
fastapi = "^0.103.1"
uvicorn = "^0.23.2"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
black = "^23.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
